--- a/html/tugas.html
+++ b/html/tugas.html
@@ -8,7 +8,13 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-container">
+        <section class="logo-icon"></section>
+        <section class="nav-container">
+            <button>Home</button>
+            <button>Our Pages</button>
+            <button>Call Us</button>
+        </section>
     </header>
 </body>
 </html>
