--- a/html/tugas.html
+++ b/html/tugas.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lintang Travel</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Lintang's Travel</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -16,5 +16,26 @@
             <button>Call Us</button>
         </section>
     </header>
+    
+    <br>
+    <h1><center>Your Trusted Travel Agent</center></h1>
+    <br>
+    <h2 style="color:darkgrey"><center>Your happiness is our happiness</center></h2>
+
+    <section class="content-container">
+        <div class="about">
+            <img src="https://img.freepik.com/free-vector/adventure-lettering-with-photo_52683-69244.jpg?w=740&t=st=1711509907~exp=1711510507~hmac=96c6a3bdc5c52049ba083e72232951e671fb1e0d87226cdb7fad6db47813a251">
+
+             <p><i>"Traveling sambil berpetualang adalah yang terbaik"</i></p>
+        </div>
+
+        <div class="contact">
+            <form>
+             <h2>Contact Us</h2>
+             <label>mlmlm</label>
+            </form>
+        </div>
+    </section>
 </body>
+
 </html>
