--- a/html/tugas.html
+++ b/html/tugas.html
@@ -19,20 +19,44 @@
     
     <br>
     <h1><center>Your Trusted Travel Agent</center></h1>
-    <br>
     <h2 style="color:darkgrey"><center>Your happiness is our happiness</center></h2>
 
     <section class="content-container">
         <div class="about">
             <img src="https://img.freepik.com/free-vector/adventure-lettering-with-photo_52683-69244.jpg?w=740&t=st=1711509907~exp=1711510507~hmac=96c6a3bdc5c52049ba083e72232951e671fb1e0d87226cdb7fad6db47813a251">
-
-             <p><i>"Traveling sambil berpetualang adalah yang terbaik"</i></p>
+            <br>
+            <p><i>"Traveling sambil berpetualang adalah yang terbaik"</i></p>
         </div>
 
         <div class="contact">
             <form>
              <h2>Contact Us</h2>
-             <label>mlmlm</label>
+             <p>Admin akan menghubungi Anda dalam 1×24 jam setelah Anda mengirimkan pesan.</p>
+
+            <label for="name">Your name:</label><br>
+            <input id="name" type="text">
+
+            <br>
+
+            <label for="email">Email Address:</label><br>
+            <input type="email" type="email">
+
+            <br>
+
+            <label for="interest">What are you interested in?</label><br>
+
+            <select>
+                <optgroup label="Select option">
+                    <option>Holiday</option>
+                    <option>Vacation</option>
+                    <option>Traveling</option>
+                    <option>Travelinf and Adventure</option>
+                </optgroup>
+            </select>
+
+            <br>
+                
+            <input type="submit" value="Send">
             </form>
         </div>
     </section>
